turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:30: error: too many arguments for method apply: (i: Int)Array[Array[Int]] in class Array
		rule(state,i) match {
                    ^Turmite:32: error: too many arguments for method apply: (i: Int)Array[Array[Int]] in class Array
						 setCouleurSol(colors(rule(state,getCouleurSol,0)))
                                                                          ^Turmite:34: error: too many arguments for method apply: (i: Int)Array[Array[Int]] in class Array
						 setCouleurSol(colors(rule(state,getCouleurSol,0)))
                                                                          ^Turmite:37: error: too many arguments for method apply: (i: Int)Array[Array[Int]] in class Array
						 setCouleurSol(colors(rule(state,getCouleurSol,0)))
                                                                          ^Turmite:41: error: too many arguments for method apply: (i: Int)Array[Array[Int]] in class Array
						 setCouleurSol(colors(rule(state,getCouleurSol,0)))
                                                                          ^Turmite:46: error: too many arguments for method apply: (i: Int)Array[Array[Int]] in class Array
						 setCouleurSol(colors(rule(state,getCouleurSol,0)))
                                                                          ^